<resources>
    <string name="app_name">FeeAppMobile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="txt_institute">Institute fees</string>
    <string name="txt_save_student">Saved Students</string>
    <string name="txt_vadodara">Vadodara</string>
    <string name="hint_institute">Select Institute</string>
    <string name="btn_txt_proceed">Proceed</string>
    <string name="txt_frequent_transaction">Frequent Transactions</string>

    // Transactions

    <string name="txt_all">All</string>
    <string name="txt_frequent">Frequent</string>


    // Student Details
    <string name="txt_institute_name">St. Kabir School - CBSE [ SBVP ]</string>
    <string name="txt_city_name">Vadodara</string>
    <string name="txt_change">Change</string>
    <string name="hint_student_enrollment">Student Enrollment Number</string>
    <string name="hint_student_dob">Student Date of Birth</string>
    <string name="txt_student_details">Student Details</string>
    <string name="txt_student_name">Student\'s Name :</string>
    <string name="txt_class">Class :</string>
    <string name="btn_txt_confirm">CONFIRM STUDENT</string>
    <string name="txt_save_student_details">Save Student Details for quick future payments</string>

    // Fee Structure
    <string name="txt_monthly">Monthly Fees</string>

    <string name="txt_tuition">Tuition</string>
    <string name="txt_test">Test</string>
    <string name="txt_books">Books</string>
    <string name="txt_convenience">Convenience</string>
    <string name="txt_total">Total</string>
    <string name="txt_fee_tenure">Fee Tenure :</string>
    <string name="hint_enter_email">Enter Email Address</string>
    <string name="txt_your_receipt">Your receipt will be sent to this email address</string>
    <string name="btn_txt_proceed_to_pay">PROCEED TO PAY</string>
    <string name="txt_payment_confirmation">Payment confirmation will be sent to this phone no.</string>

    // About

    <string name="txt_about_fee">About Fee App</string>
    <string name="txt_version">Version: 1.0.0</string>
    <string name="txt_about_developer">About The Developers</string>
    <string name="txt_powered_by">Payments powered by Bill Desk </string>
    <string name="txt_black_id">Black ID Solutions Pvt. Ltd.</string>
    <string name="txt_description">Lorem ipsum dolor sit amet,consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    
    //

    <string name="txt_saved_ids">Saved Students IDs</string>
    <string name="txt_add">Add</string>

</resources>
