<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.freeappmobile.profile.AboutActivity">


    <LinearLayout
        android:id="@+id/toolbar_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title_app"
                    style="@style/txt_black_color_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_about_fee" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/institute_fees_line" />
            </LinearLayout>

            <TextView
                style="@style/txt_black_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/txt_version" />


            <TextView
                style="@style/txt_black_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/txt_powered_by" />

            <TextView
                android:id="@+id/txt_description_app"
                style="@style/txt_black_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/txt_description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_40"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title_developer"
                    style="@style/txt_black_color_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_about_developer" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/institute_fees_line" />
            </LinearLayout>


            <TextView
                style="@style/txt_black_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/txt_black_id" />

            <TextView
                android:id="@+id/txt_description_developer"
                style="@style/txt_black_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/txt_description" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>
