<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".student.StudentDetailsActivity">

    <LinearLayout
        android:id="@+id/toolbar_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_institute_name"
                        style="@style/txt_black_color_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_institute_name" />

                    <TextView
                        android:id="@+id/txt_city_name"
                        style="@style/txt_black_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_city_name" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/institute_fees_line" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp">

                    <TextView
                        android:id="@+id/txt_change"
                        style="@style/txt_btn_bg_color_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_change" />
                </LinearLayout>

            </LinearLayout>


            <EditText
                android:id="@+id/txt_student_enrollment_number"
                style="@style/et_home"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15dp"
                android:drawableLeft="@drawable/select_institute"
                android:hint="@string/hint_student_enrollment"
                android:textColorHint="@color/btn_bg" />

            <TextView
                android:id="@+id/txt_student_dob"
                style="@style/et_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:textColorHint="@color/btn_bg"
                android:drawableLeft="@drawable/calander_icon"
                android:hint="@string/hint_student_dob" />

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_institute_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/txt_black_color_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_student_details" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/institute_fees_line" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp">

                    <TextView

                        style="@style/txt_black_color"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="@string/txt_student_name" />

                    <TextView
                        android:id="@+id/txt_student_name"
                        style="@style/txt_btn_bg_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_5dp"
                        android:text="ABHUITH S " />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp">

                    <TextView

                        style="@style/txt_black_color"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="@string/txt_class" />

                    <TextView
                        android:id="@+id/txt_student_class"
                        style="@style/txt_btn_bg_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_5dp"
                        android:text="3 A" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chk_save_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/txt_btn_bg_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_save_student_details"
                        android:textSize="@dimen/txt_size_12" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_confirm_student"
                    style="@style/btnStyleProceed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_20"
                    android:text="@string/btn_txt_confirm" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
